horizontal scrolling added to the rent demands page and buttons fixed on my rents page

--- a/app/assets/stylesheets/pages/rent_show.scss
+++ b/app/assets/stylesheets/pages/rent_show.scss
@@ -13,7 +13,15 @@
   flex-wrap: nowrap;
   overflow: auto;
   width: 100%;
-  height: 400px;
+  height: 425px;
+}
+
+.flex-demand {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: auto;
+  width: 100%;
+  height: 485px;
 }
 
 .flex-item {
